--- a/tiki_fe/package.json
+++ b/tiki_fe/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/styles": "^4.11.2",
     "next": "^10.0.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
