--- a/tiki_fe/package.json
+++ b/tiki_fe/package.json
@@ -18,6 +18,11 @@
     "next": "^10.0.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
+  },
+  "devDependencies": {
+    "next-redux-wrapper": "^6.0.2"
   }
 }
