--- a/tiki_api/package.json
+++ b/tiki_api/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@hapi/boom": "9.x.x",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "hapi-pino": "^8.3.0",
     "haute-couture": "3.x.x",
@@ -39,6 +40,7 @@
     "confidence": "4.x.x",
     "dotenv": "8.x.x",
     "eslint": "7.x.x",
+    "hoek": "^6.1.3",
     "hpal": "2.x.x",
     "hpal-debug": "1.x.x",
     "nodemon": "^2.0.7",
