--- a/tiki_fe/package.json
+++ b/tiki_fe/package.json
@@ -20,9 +20,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "next-redux-wrapper": "^6.0.2"
+    "next-redux-wrapper": "^6.0.2",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
