--- a/tiki_api/server/.env-keep
+++ b/tiki_api/server/.env-keep
@@ -4,3 +4,10 @@
 #
 # e.g.
 PORT=3001
+NODE_ENV=development
+
+PG_HOST=127.0.0.1
+PG_PORT=5433
+PG_USER=postgres
+PG_PASSWORD=Pass@word1
+PG_DATABASE=tiki
