--- a/tiki_api/.eslintrc.json
+++ b/tiki_api/.eslintrc.json
@@ -1,9 +1,10 @@
 {
-  "extends": "@hapi/eslint-config-hapi",
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "script"
   },
-  "indent": ["error", "tab"]
+  "rules": {
+    "indent": [2, 2]
+  }
 }
