--- a/tiki_api/server/.env
+++ b/tiki_api/server/.env
@@ -4,10 +4,11 @@
 #
 # e.g.
 PORT=3001
+NODE_ENV=development
 
 PG_HOST=127.0.0.1
 PG_PORT=5433
 PG_USER=postgres
 PG_PASSWORD=Pass@word1
 PG_DATABASE=tiki
-
+PG_DATABASE_TEST=tiki_test
